--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>HTML Forms</title>
 </head>
 
@@ -32,17 +35,97 @@
                         <div class="col-3">
                             <div class="mb-3">
                                 <label for="formGroupExampleInput" class="form-label">CVC</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput"
-                                    placeholder="00000">
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="00000">
+                            </div>
                         </div>
-                        <div class="col-3"></div>
+                        <div class="col-3">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">Amount</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Amount">
+                            </div>
+                        </div>
                     </div>
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">City</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <label for="inputState" class="form-label">State</label>
+                            <select id="inputState" class="form-select">
+                                <option selected>Pick a State</option>
+                                <option>...</option>
+                            </select>
+                        </div>
+                        <div class="col-3">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">Postal Code</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="row" style="margin-left: 10px; margin-bottom: 10px;">We Accept</div>
+                            <div class="col-lg-10 bg-secondary d-flex align-content-center" style="margin-left: 10px; padding-left: 10px;">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio1" value="option1">
+                                    <label class="form-check-label" for="inlineRadio1"><i
+                                            class="fa-brands fa-cc-mastercard" style="font-size: 25px; padding-top: 2px;"></i></label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2"><i
+                                            class="fa-brands fa-cc-visa" style="font-size: 25px; padding-top: 2px;"></i></label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2"><i
+                                            class="fa-brands fa-cc-diners-club" style="font-size: 25px; padding-top: 2px;"></i></label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2"><i
+                                            class="fa-brands fa-cc-discover" style="font-size: 25px; padding-top: 2px;"></i></label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="row" style="margin-bottom: 10px; padding-left: 15px;">Message</div>
+                            <div class="row">
+                                <div class="input-group">
+                                    <textarea class="form-control" aria-label="With textarea"></textarea>
+                                </div>
+                            </div>
+                            <div class="row fs-6" style="padding-left: 15px;">Add any notes here</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-footer text-muted">
-                    2 days ago
+                    <div class="container d-flex justify-content-end">
+                        <button type="button" class="btn btn-secondary">Cancel</button>
+                        <button type="button" class="btn btn-primary" style="margin-left: 5px;">Send</button>
+                    </div>
                 </div>
             </div>
         </div>
